--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "studio:dev": "npm --prefix studio-leidy-abello run dev",
+    "studio:build": "npm --prefix studio-leidy-abello run build",
     "format": "prettier --write .",
-    "prepare": "husky install",
+    "prepare": "node scripts/prepare-husky.mjs",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev"
   },
@@ -20,7 +22,7 @@
     "@sanity/client": "^6.21.1",
     "@sanity/image-url": "^1.0.2",
     "clsx": "^2.1.1",
-    "next": "14.2.5",
+    "next": "14.2.35",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "resend": "^2.1.0",
@@ -33,7 +35,7 @@
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.5",
+    "eslint-config-next": "14.2.35",
     "eslint-config-prettier": "^9.1.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
@@ -43,6 +45,9 @@
     "prisma": "^5.16.1",
     "tailwindcss": "^3.4.6",
     "typescript": "^5.4.5"
+  },
+  "engines": {
+    "node": ">=20 <21"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx,json,md}": [
