--- a/package.json
+++ b/package.json
@@ -16,35 +16,39 @@
     "prisma:migrate": "prisma migrate dev"
   },
   "dependencies": {
-    "@phosphor-icons/react": "^2.0.15",
-    "@prisma/client": "^5.16.1",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@sanity/client": "^6.21.1",
-    "@sanity/image-url": "^1.0.2",
+    "@phosphor-icons/react": "^2.1.7",
+    "@prisma/client": "^5.22.0",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@sanity/client": "^7.4.0",
+    "@sanity/image-url": "^1.1.0",
     "clsx": "^2.1.1",
     "next": "14.2.35",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "resend": "^2.1.0",
-    "tailwind-merge": "^2.5.2",
+    "resend": "^6.0.1",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "autoprefixer": "^10.4.19",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.35",
-    "eslint-config-prettier": "^9.1.0",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.7",
-    "postcss": "^8.4.38",
-    "prettier": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.6.6",
-    "prisma": "^5.16.1",
+    "eslint-config-prettier": "^10.0.1",
+    "husky": "^9.1.1",
+    "lint-staged": "^16.1.2",
+    "postcss": "^8.5.3",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.7.2",
+    "prisma": "^5.22.0",
     "tailwindcss": "^3.4.6",
     "typescript": "^5.4.5"
+  },
+  "overrides": {
+    "next": "14.2.35",
+    "eslint-config-next": "14.2.35"
   },
   "engines": {
     "node": ">=20 <21"
