--- a/package.json
+++ b/package.json
@@ -25,16 +25,16 @@
     "@sanity/image-url": "^1.1.0",
     "clsx": "^2.1.1",
     "next": "14.2.35",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "resend": "^6.0.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "18.2.79",
+    "@types/react-dom": "18.2.25",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.35",
@@ -50,7 +50,9 @@
   },
   "overrides": {
     "next": "14.2.35",
-    "eslint-config-next": "14.2.35"
+    "eslint-config-next": "14.2.35",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "engines": {
     "node": ">=20 <21"
