--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "format": "prettier --write .",
     "prepare": "node scripts/prepare-husky.mjs",
     "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev"
+    "prisma:migrate": "prisma migrate dev",
+    "test": "vitest run",
+    "test:ui": "vitest"
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
@@ -26,6 +28,7 @@
     "clsx": "^2.1.1",
     "next": "14.2.35",
     "react": "18.2.0",
+    "react-hcaptcha": "^1.0.5",
     "react-dom": "18.2.0",
     "resend": "^6.0.1",
     "tailwind-merge": "^2.6.0",
@@ -40,11 +43,15 @@
     "eslint-config-next": "14.2.35",
     "eslint-config-prettier": "^10.0.1",
     "husky": "^9.1.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "jsdom": "^21.1.0",
     "lint-staged": "^16.1.2",
     "postcss": "^8.5.3",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.7.2",
     "prisma": "^5.22.0",
+    "vitest": "^2.1.9",
     "tailwindcss": "^3.4.6",
     "typescript": "^5.4.5"
   },
