--- a/package.json
+++ b/package.json
@@ -27,11 +27,10 @@
     "@sanity/client": "^7.14.1",
     "@sanity/image-url": "^2.0.3",
     "clsx": "^2.1.1",
-    "next": "^15.0.0-rc.0",
-    "react": "^19.0.0-rc.0",
-    "react-dom": "^19.0.0-rc.0",
+    "next": "14.2.24",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "resend": "^3.5.0",
-    "sanity": "^5.6.0",
     "styled-components": "^6.1.15",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
@@ -39,13 +38,13 @@
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.4.8",
-    "@testing-library/react": "^16.0.0",
+    "@testing-library/react": "^14.3.1",
     "@types/node": "^20.14.12",
-    "@types/react": "^19.2.9",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.7.0",
-    "eslint-config-next": "^15.0.0-rc.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.24",
     "eslint-config-prettier": "^9.1.0",
     "husky": "^9.1.1",
     "jsdom": "^24.1.1",
@@ -60,7 +59,7 @@
     "vitest": "^2.1.9"
   },
   "engines": {
-    "node": ">=24"
+    "node": "20.x"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx,json,md}": [
