--- a/studio-leidy-abello/package.json
+++ b/studio-leidy-abello/package.json
@@ -9,9 +9,12 @@
     "deploy": "sanity deploy"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "sanity": "^3.54.1",
     "styled-components": "^6.1.11"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
